# prompt-beacon

./: .gitignore  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
